# sdl_core

./: .gitignore  CMakeLists-mac.txt  CMakeLists.txt  CMakeLists.txt-ubuntu  DEBUG.md  EXTENRAL_PROPRIETARY_0710.md  Makefile-simple  README.md
compiled/ubuntu/: README.md
compiled_packages/: README.md  helloworld_1.0-1.deb  helloworld_1.0-2.deb
compiled_packages/helloworld_1.0-2/DEBIAN/: control
compiled_packages/macos/: Makefile  README.md  README_BUILD.md  README_log4cxx_not_found.md  README_not_found.md  cmake_install.cmake
compiled_packages/macos/src/3rd_party-static/: Makefile  cmake_install.cmake
compiled_packages/macos/src/3rd_party-static/encryption/: Makefile
compiled_packages/macos/src/3rd_party-static/jsoncpp/: Makefile  cmake_install.cmake
compiled_packages/macos/src/appMain/: Makefile  build_config.txt  cmake_install.cmake  smartDeviceLink.ini
compiled_packages/macos/src/components/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/application_manager/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/config_profile/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/connection_handler/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/formatters/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/hmi_message_handler/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/interfaces/: HMI_API.h  HMI_API_schema.cc  HMI_API_schema.h  MOBILE_API.h  MOBILE_API_schema.cc  MOBILE_API_schema.h  Makefile  cmake_install.cmake  generated_msg_version.h  v4_protocol_v1_2_no_extra.h  v4_protocol_v1_2_no_extra_schema.cc  v4_protocol_v1_2_no_extra_schema.h
compiled_packages/macos/src/components/media_manager/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/protocol/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/protocol_handler/: Makefile  cmake_install.cmake
compiled_packages/macos/src/components/resumption/: Makefile  cmake_install.cmake
compiled_packages/macos/src/plugins/: Makefile  cmake_install.cmake
compiled_packages/macos/tools/: Makefile  cmake_install.cmake
compiled_packages/macos/tools/policy_table_validator/: Makefile  cmake_install.cmake  policyValidator
compiled_packages/test_packages/: test_openssl.c
compiled_packages/test_packages/lib/: makefile
compiled_packages/test_packages/lib/boost/: test_boost.c
compiled_packages/test_packages/lib/encryption/: CMakeLists.txt  Makefile  cmake_install.cmake
compiled_packages/test_packages/src/encryption/: CMakeLists.txt  Makefile  cmake_install.cmake
compiled_packages/test_packages/src/encryption/cmake-helpers/: platform.cmake  sources.cmake
compiled_packages/test_packages/test_openssl.o.dSYM/Contents/: Info.plist
debug/: request.json
docker/: CORE_DOCKER_README.md  Dockerfile
docker/dev/: CORE_DEV_README.md  Dockerfile  PUSH.md  docker-compose.yml
docker/external_proprietary/: Dockerfile  PUSH.md  docker-compose.yml  start-script.sh
docker/supervisor/: core_supervisor.md
src/appMain/: sdl_preloaded_pt.json  sdl_preloaded_pt_max_allowed-old.json  sdl_preloaded_pt_max_allowed.json  smartDeviceLink.ini
src/components/application_manager/src/: application_manager_impl.cc  help_prompt_manager_impl.cc  hmi_interfaces_impl.cc  smart_object_keys.cc
src/components/application_manager/test/: application_manager_impl_test.cc  help_prompt_manager_test.cc  mock_message_helper.cc  policy_handler_test.cc
src/components/config_profile/src/: profile.cc
src/components/include/protocol_handler/: protocol_handler.h
src/components/include/utils/: byte_order.h  logger.h
src/components/interfaces/: HMI_API.xml  MOBILE_API.xml
src/components/policy/policy_external/: CMakeLists.txt
src/components/policy/policy_regular/: CMakeLists.txt
src/components/protocol_handler/: CMakeLists.txt
src/components/protocol_handler/src/: protocol_handler_impl.cc
src/components/protocol_handler/test/: protocol_handler_tm_test.cc
src/components/security_manager/src/: security_manager_impl.cc
src/components/transport_manager/: CMakeLists.txt
src/components/utils/: CMakeLists.txt
src/components/utils/src/: signals_posix.cc  timer.cc
tools/InterfaceGenerator/generator/generators/: PolicyTypes.py  SmartFactoryBase.py
tools/cmake/helpers/: generators.cmake
tools/policy_table_validator/: CMakeLists.txt
vagrant/: EXTENRAL_PROPRIETARY_0710.md  compile-dev.sh  compile.sh  dependencies.sh  samba.sh  startup.sh
vagrant/sdl_core/: CORE_README.md  OLD_CORE_README.md  README.md  Vagrantfile  gstream.md  startup.sh  vagrant_readme.md
vagrant/sdl_core/gstreamer/: tcpclientsrc.md
vagrant/sdl_core/scripts/: 00_install_dependencies.sh  10_make.sh  20_gstreamer_setup.sh  30_build.sh  Dockerfile  SETUP_README.md
vagrant/sdl_core_develop/: README.md  Vagrantfile  Vagrantfile.orig
vagrant/sdl_core_min/: README.md  Vagrantfile  dependencies_full.sh
vagrant/startup/: .startup-example.sh  log4cxx.properties  sdl_preload_pt.json  sdl_preloaded_pt.json  startup.sh
(+106 files in other folders)
